# cpp-dispatcher

./: README.md
example/: CMakeLists.txt  Makefile  cget-requirements.txt  main.cpp
include/: dispatcher.hpp
include/dispatcher/: dispatcher.hpp
include/dispatcher/extra/: dispatcher_client.hpp
include/pqrs/: dispatcher.hpp
include/pqrs/dispatcher/: dispatcher.hpp  object_id.hpp  time_source.hpp
include/pqrs/dispatcher/extra/: dispatcher_client.hpp  shared_dispatcher.hpp  timer.hpp
tests/: Makefile  cget-requirements.txt  main.cpp  test.cpp
tests/src/: CMakeLists.txt  debounced_task_test.hpp  dispatcher_detach_test.cpp  dispatcher_detach_test.hpp  dispatcher_multiple_thread_test.cpp  dispatcher_recursive_test.cpp  dispatcher_recursive_test.hpp  dispatcher_test.cpp  dispatcher_test.hpp  dispatcher_when_test.cpp  dispatcher_when_test.hpp  hardware_time_source_test.cpp  hardware_time_source_test.hpp  object_id_test.cpp  object_id_test.hpp  test.cpp  timer_test.cpp  timer_test.hpp
